United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6982921 assert(_entry_bci != InvocationEntryBci) failed: wrong kind of nmethod
6982921 : assert(_entry_bci != InvocationEntryBci) failed: wrong kind of nmethod

Details
Type:
Bug
Submit Date:
2010-09-07
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs19
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
The crash occures during print compilation because nmethod::print_on() calls osr_entry_bci() without checking that the method is an osr method.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/ac4f710073ed
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/ac4f710073ed
                                     
2010-09-28
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/ac4f710073ed
                                     
2010-09-08



Hardware and Software, Engineered to Work Together