6982921: assert(_entry_bci != InvocationEntryBci) failed: wrong kind of nmethod

Assertion fails during print compilation because nmethod::print_on() calls osr_entry_bci() without checking that the method is an osr method. The fix adds an appropriate check.

Reviewed-by: never, twisti